fix: #3 - Fixed scrollbar overflow

--- a/Compy.theme.css
+++ b/Compy.theme.css
@@ -204,7 +204,7 @@
 
 /* DM Scroll Bar */
 [aria-label=" (channel)"] .scroller-kQBbkU{
-    width: calc(100%);
+    width: 100%;
 }
 
 /* Server Message Bar */
